@@ -1,27 +1,0 @@
-Todd Miller has added a matplotlib.numerix module to allow matplotlib
-to choose between Numeric or numarry.  See the header of that file for
-information on how to choose between Numeric or Numarray from the
-command line or using environment variables.  
-
-For the most part this is seamless and should provide any problems.
-Below is a status report of known issues
-
-* divide array by float - Many of the matplotlib examples do things
-  like exp(-t/2.0) where t is an array.  If you have 'from __future__
-  import division (as matplotlib.matlab does) then you will get an
-  error along the lines of 
-
-    TypeError: unsupported operand type(s) for /: 'NumArray' and 'float'"
-
-  Solution: use numarray 0.9 or later; for older versions, use
-  divide(-t, 2.0)
-
-* stock demo does not run with "TypeError: unsubscriptable object"
-
-  Solution: array resize/reshape bug fixed in numarray CVS
-
-* Use of convolve in csd demo fails with "ValueError: Invalid
-  convolution mode"
-
-  Solution: fixed in numarray CVS  
-  
