@@ -1,0 +1,1 @@
+from numpy.oldnumeric.linear_algebra import *
