@@ -1,0 +1,4 @@
+from numpy.oldnumeric.mlab import *
+
+amin = min
+amax = max
