@@ -1,0 +1,1 @@
+from numpy.oldnumeric.random_array import *
