@@ -124,12 +124,6 @@ packages = [
     'matplotlib.backends',
     'matplotlib.toolkits',
     'matplotlib.numerix',
-    'matplotlib.numerix.mlab',
-    'matplotlib.numerix.ma',
-    'matplotlib.numerix.npyma',
-    'matplotlib.numerix.linear_algebra',
-    'matplotlib.numerix.random_array',
-    'matplotlib.numerix.fft',
     ]
 
 
