@@ -1,3 +1,7 @@
+2007-07-19 replaced the Python code in numerix/ by a minimal wrapper around
+           numpy that explicitly mentions all symbols that need to be
+	   addressed for further numpification - NN
+
 2007-07-18 make usetex respect changes to rcParams. texmanager used to 
            only configure itself when it was created, now it 
            reconfigures when rcParams are changed. Thank you Alexander 
